quick fix for layout shift between card and timer

--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -1,6 +1,6 @@
 .game-card {
   width: 285px;
-  height: 160px;
+  height: 165px;
   background: var(--white);
   border: 3px solid var(--black);
   box-shadow: 0px 10px 0px var(--black);
